--- a/core/app/views/ProcureUnits/index.html
+++ b/core/app/views/ProcureUnits/index.html
@@ -3,6 +3,7 @@
 #{set 'moreScripts'}
     #{script 'component/pagination.coffee'/}
     #{script 'procureunits/index.coffee'/}
+    #{script 'procureunits/_unit_list.coffee'/}
 #{/set}
 #{errorMsgs /}
 #{flash_alert /}
