--- a/core/app/views/ProcureUnits/_unit_list.html
+++ b/core/app/views/ProcureUnits/_unit_list.html
@@ -1,4 +1,3 @@
-#{script 'procureunits/_unit_list.coffee'/}
 #{set tr_key: key ? key : 'unit'/}
 <table class="table table-condensed table-bordered" id="unit_table">
   <tr>
@@ -81,7 +80,7 @@
         #{if unit.fba}
             #{cache unit.fba.feedsPageCacheKey(), for:'3h'}
             ${unit.fba.shipmentId}
-                #{set feeds: unit.fba.feeds()/} <!-- TODO 跟踪是否任旧会导致耗尽 request pool-->
+                #{set feeds: unit.fba.feeds()/}
                 #{if feeds.size() > 0}
                     #{render '/app/views/gt_templates/feeds.html', feeds: feeds, key: unit.fba.shipmentId, fid: unit.fba.id/}
                     #{set lastFeed: feeds.get(0)/}
@@ -138,11 +137,11 @@
     <td>#{time_tooltip time:unit.attrs.deliveryDate/}</td>
     <td style="background:${unit.stage.rgb()}">${unit.stage.label()}</td>
     <td id="isplaced_${unit.id}">#{yesOrNo f:unit.isPlaced/}</td>
-    <td>#{yesOrNo f:unit.isConfirm/}</td>
+    <td name="isConfirm">#{yesOrNo f:unit.isConfirm/}</td>
     <td>${unit.isOut?.label()}</td>
     <td>${unit.isship()}</td>
     <td>
-        #{set taskLink: unit.fetchCheckTaskLink()/} <!-- TODO 跟踪是否任旧会导致耗尽 request pool-->
+        #{set taskLink: unit.fetchCheckTaskLink()/}
         #{if taskLink}
           <a href="${taskLink}" target="_blank">查看</a>
         #{/if}
@@ -242,8 +241,8 @@
                            href="@{ProcureUnits.markPlace(unit.id)}" data-disable-with='更新中'>抵达货代</a>
                       #{/ifnot}
                   #{/if}
-                <a data-remote='true' data-method='PUT' class="btn btn-small btn-warning" id="isConfirm_${unit.id}_btn"
-                   href="@{ProcureUnits.confirmUnit(unit.id)}" data-disable-with='更新中'>已核单</a>
+                <a href="javascript:void(0)" class="btn btn-small btn-warning" data-href="@{ProcureUnits.confirmUnit(unit.id)}"
+                   name="confirmUnitBtn" data-tragettr="procureUnit_${unit.id}">已核单</a>
               </div>
                 #{if unit.fba}
                     #{power.ck 'fbas.update'}
@@ -266,7 +265,7 @@
         #{ifnot norecord}
             #{cache unit.recordsPageCacheKey(), for:'3h'}
               <div style="max-height:160px;overflow:auto;margin-bottom:20px;">
-                  #{records_ul  records: unit.records()/} <!-- TODO 跟踪是否任旧会导致耗尽 request pool-->
+                  #{records_ul  records: unit.records()/}
               </div>
             #{/cache}
         #{/ifnot}
