--- a/core/app/views/ProcureUnits/_unit_list.html
+++ b/core/app/views/ProcureUnits/_unit_list.html
@@ -121,6 +121,8 @@
     <td>
       <!-- FnSku 下载 Label -->
         #{if unit.selling?.fnSku}
+            ${unit.selling.fnSku}
+          <br/>
           <a href="@{ProcureUnits.fnSkuLable(unit.sid)}" target="_blank" rel="tooltip" title="增加了 SKU 信息">
             <i class="icon-download-alt"></i> New
           </a>
