更换FBA功能修改

--- a/core/app/views/Deliveryments/fba_carton_contents_new.html
+++ b/core/app/views/Deliveryments/fba_carton_contents_new.html
@@ -4,10 +4,10 @@
     <td><abbr title="多少个箱子(不包含尾箱)">箱数(仅含主箱)</abbr></td>
     <td><abbr title="单个主箱内货物的个数">个数(主箱)</abbr></td>
     <td><abbr title="单个尾箱内货物的个数(默认只有一个尾箱)">个数(尾箱)</abbr></td>
-    <td><abbr title="单个箱子的重量">箱重(lbs.)</abbr></td>
-    <td><abbr title="单个箱子的长度">箱长(in.)</abbr></td>
-    <td><abbr title="单个箱子的宽度">箱宽(in.)</abbr></td>
-    <td><abbr title="单个箱子的高度">箱高(in.)</abbr></td>
+    <td><abbr title="单个箱子的重量">箱重</abbr></td>
+    <td><abbr title="单个箱子的长度">箱长</abbr></td>
+    <td><abbr title="单个箱子的宽度">箱宽</abbr></td>
+    <td><abbr title="单个箱子的高度">箱高</abbr></td>
     <td>选择方案</td>
   </tr>
 #{list items:list, as:'unit'}
