条码增加EA开头替换品线开头

--- a/core/app/views/ProcureUnits/fnSkuLable.html
+++ b/core/app/views/ProcureUnits/fnSkuLable.html
@@ -41,7 +41,7 @@
           ${selling.aps?.sortTitle()}
           <br>
           <b>NEW</b><br>
-        ${selling.listing?.product?.sku}
+        EA${selling.listing?.product?.sku.substring(2)}
         </td>
       #{/list}
   </tr>
