--- a/core/app/views/Shipments/_paymentunits.html
+++ b/core/app/views/Shipments/_paymentunits.html
@@ -110,8 +110,7 @@
           #{/if}
       </form>
         #{if ship.whouse.country.contains('DE') }
-          <a class="btn btn-info" data-method='POST' data-disable-with='申请中...' href='@{PaymentUnits
-          .applyDutyFromShipment(ship.id)}' style="display: none">
+          <a class="btn btn-info" data-method='POST' data-disable-with='申请中...' href='@{PaymentUnits  .applyDutyFromShipment(ship.id)}' style="display: none">
             计算预交关税
           </a>
         #{/if}
@@ -205,7 +204,7 @@
     <td>系统计算得出</td>
     <td><%= fee.currentAvgPrice %></td>
     <td>
-      <input type="number" readonly="" class="input-mini" class="amount" value="<%= fee.amount%>">
+      <input type="number" readonly="" class="input-mini amount" value="<%= fee.amount%>">
     </td>
     <td>
       <%= fee.cooperator.name %>
