*  补上缺少的分页 js

--- a/core/app/views/Applys/transports.html
+++ b/core/app/views/Applys/transports.html
@@ -1,6 +1,7 @@
 #{extends 'main_full.html'/}
 #{set title:"请款单列表" /}
 #{set 'moreScripts'}
+  #{script 'component/pagination.coffee'/}
 #{/set}
 
 #{form @Applys.transports(), class:'search_form', id:'transports_form', method:'POST'}
