*  固定备注的 rows 为 3

--- a/core/app/views/Shipments/_paymentunits.html
+++ b/core/app/views/Shipments/_paymentunits.html
@@ -98,7 +98,7 @@
         </label>
 
         <label>备注
-          <textarea name="fee.memo" class="input"></textarea>
+          <textarea name="fee.memo" class="input" rows="3"></textarea>
         </label>
 
         <button type="submit" class="btn btn-success" data-url='@{PaymentUnits.fromShipment(ship.id)}'>添加费用</button>
