*  最大只返回 10 条记录给前端作为 typeahead 的 source

--- a/core/app/views/Applys/transport.html
+++ b/core/app/views/Applys/transport.html
@@ -25,7 +25,7 @@
         <input type="hidden" name="p.page" value="${p.page}">
         <input type="hidden" name="p.applyId" value="${p.applyId}">
         <input type="text" class="" style="width: 300px;" name="p.search"
-               placeholder="支持运输单 ID、TrackNo、FBA、费用ID、费用备注" autocomplete="off" value="${p.search}">
+               placeholder="支持运输单 ID、TrackNo、FBA、费用备注" autocomplete="off" value="${p.search}">
         <button class="btn btn-primary" data-loading>搜索</button>
       </form>
     </div>
