*  为 PaymentUnit 增加缓存 *  考虑到 PaymentUnit 一般都是从上而下来获取信息, 比较少的情况会从 PaymentUnit 往上, 所以为其加上 fetch = FetchType.LAZY

--- a/core/app/views/Shipments/_paymentunits.html
+++ b/core/app/views/Shipments/_paymentunits.html
@@ -23,7 +23,7 @@
           <th class="span2">申请时间</th>
           <th class="span3"></th>
         </tr>
-      #{list items:ship.allFees(), as:'fee'}
+      #{list items:ship.fees, as:'fee'}
         <tr id='fee_${fee.id}'>
           <td>${fee.id}</td>
           <td><span class="label ${fee.stateLabel()}">${fee.feeType.nickName}</span></td>
