*  将 #{script 'deliveryments/fba_carton_contents.coffee'/} 挪到 Parent 页面的头部 统一添加

--- a/core/app/views/Deliveryments/show.html
+++ b/core/app/views/Deliveryments/show.html
@@ -7,6 +7,7 @@
     #{script 'analyzes/timeline.coffee'/}
     #{script 'deliveryments/show.coffee'/}
     #{script 'procureunits/_unit_list.coffee'/}
+    #{script 'deliveryments/fba_carton_contents.coffee'/}
 #{/set}
 #{errorMsgs /}
 #{flash_alert /}
@@ -115,9 +116,7 @@
 
 #{success_row title:"已经添加进入[采购单]的[采购单元] "/}
 <form action="#" id="bulkpost" method="POST">
-
   <input type="hidden" name="expressid" id="expressid" value="${expressid}">
-
   <div class="row-fluid">
     <div class="span12" id="unit_list">
     #{render 'ProcureUnits/_unit_list.html', units:dmt.units, checkbox:true, key:'delivery', delivery:true/}
@@ -147,11 +146,11 @@
          id="downloadFBAZIP" class="btn btn-success" rel="popover" content="将选定的采购单元的 出货FBA进行压缩打包">
         <i class="icon-download-alt"></i>下载FBA ZIP 包
       </a>
+    </div>
+    <input id='form_method' type="hidden" name="x-http-method-override" value="POST">
   </div>
-  <input id='form_method' type="hidden" name="x-http-method-override" value="POST">
-
-#{render 'Deliveryments/box_number_model.html'/}
-#{render 'Deliveryments/fba_carton_contents.html'/}
+#{render 'Deliveryments/_box_number_model.html'/}
+#{render 'Deliveryments/_fba_carton_contents.html'/}
 </form>
 *{ TODO 这个对 http://e.easya.cc/deliveryment/DL%7C201310%7C01 有问题}*
 *{#{power.ck 'excels.deliveryment'}}*
