--- a/core/app/views/ShipPlans/index.html
+++ b/core/app/views/ShipPlans/index.html
@@ -3,6 +3,7 @@
 #{set 'moreScripts'}
     #{script 'component/pagination.coffee'/}
     #{script 'shipplans/index.coffee'/}
+    #{script 'deliveryments/fba_carton_contents.coffee'/}
 #{/set}
 #{errorMsgs /}
 #{flash_alert /}
@@ -66,8 +67,8 @@
         </div>
       </div>
     </div>
-  #{render 'Deliveryments/box_number_model.html'/}
-  #{render 'Deliveryments/fba_carton_contents.html'/}
+  #{render 'Deliveryments/_box_number_model.html'/}
+  #{render 'Deliveryments/_fba_carton_contents.html'/}
   </form>
 
   <div class="row-fluid">
