*  Product 增加仓库相关属性

--- a/core/app/views/Products/show.html
+++ b/core/app/views/Products/show.html
@@ -7,13 +7,13 @@
     #{script 'products/product_detail.coffee'/}
     #{script 'products/skulinechart.coffee'/}
 #{/set}
+#{errorMsgs /}
+#{flash_alert /}
 
 #{if pro == null}
 读取的 Product 不存在!
 #{/if}
 #{else }
-    #{errorMsgs /}
-    #{flash_alert /}
 <ul class="nav nav-tabs">
   <li class="active">
     <a href="#basicinfo" data-toggle='tab'>基本信息</a>
@@ -31,13 +31,15 @@
   <li>
     <a href="#procureinfo" data-toggle='tab' id="skuProcureInfo">采购信息</a>
   </li>
+  <li>
+    <a href="#whouseAttrs" data-toggle="tab" id="showWhouseAttr">仓库信息</a>
+  </li>
 </ul>
 
 <div id="selling_tabs" class="tab-content">
   <div class="tab-pane fade active in" id='basicinfo'>
       #{include 'Products/_basicInfo.html'/}
   </div>
-
   <div class="tab-pane fade" id='extends'>
     <div class="row-fluid">
       <form class="search_form" id="select_template_form">
@@ -53,7 +55,7 @@
 
         #{info_row title:'Attributes'/}
       <div id="extends_atts_home">
-          #{include 'Products/attrs.html'/}
+          #{include 'Products/_attrs.html'/}
       </div>
     </div>
   </div>
@@ -81,11 +83,10 @@
 
   <div class="tab-pane fade" id='procureinfo'>
     <input type="hidden" name="skuprocurevalue" value="0">
-
     <div class="row-fluid">
       <table class="table table-bordered">
         <tr>
-          <td class="span2" style="font:bold">总采购数量</td>
+          <td class="span2">总采购数量</td>
           <td>${procureqty}</td>
         </tr>
       </table>
@@ -100,5 +101,8 @@
     </div>
   </div>
 
+  <div class="tab-pane fade" id='whouseAttrs'>
+      #{include 'Products/_whouseAttrs.html'/}
+  </div>
 </div>
 #{/else}
