--- a/core/app/views/Products/_whouseAttrs.html
+++ b/core/app/views/Products/_whouseAttrs.html
@@ -59,4 +59,23 @@
       </tr>
     </table>
   </form>
+
+  <div class="row-fluid">
+    <div class="span12">
+      <h4 class="alert alert-success">附件<i class="icon-sort-down"></i></h4>
+    </div>
+  </div>
+  <div class="row-fluid">
+    <div style="min-height:300px;" class="span12 well" id="whouseAttrsDropbox">
+      <ul class="thumbnails uploaded"></ul>
+      <div class="message" style="height:150px;padding-top:145px;text-align:center;">拖拽文件到此上传</div>
+    </div>
+  </div>
+
+  <div class="row-fluid">
+    <div class="span2">
+      <div id="file_home" data-fid="${pro.sku}"></div>
+      <input type="button" class="btn btn-default btn-block" value="上传" id="whouseAttrsAttachButton" data-loading>
+    </div>
+  </div>
 </div>
