--- a/core/app/views/Products/show.html
+++ b/core/app/views/Products/show.html
@@ -4,8 +4,10 @@
     #{script 'highstock.js'/}
     #{script 'jquery.filedrop.js' /}
     #{script 'component/dropUpload.coffee'/}
-    #{script 'products/product_detail.coffee'/}
+    #{script 'products/show.coffee'/}
     #{script 'products/skulinechart.coffee'/}
+    #{script 'localResize.coffee'/}
+    #{script 'localResize.ui.coffee'/}
 #{/set}
 #{errorMsgs /}
 #{flash_alert /}
