*  产品信息增加权限校验

--- a/core/app/views/Products/show.html
+++ b/core/app/views/Products/show.html
@@ -26,16 +26,17 @@
   <li>
     <a href="#newattach" data-toggle='tab' id="showAttachs">附件管理</a>
   </li>
-
   <li>
     <a href="#saleinfo" data-toggle='tab' id="skuSaleInfo">销售信息</a>
   </li>
   <li>
     <a href="#procureinfo" data-toggle='tab' id="skuProcureInfo">采购信息</a>
   </li>
-  <li>
-    <a href="#whouseAttrs" data-toggle="tab" id="showWhouseAttr">仓库信息</a>
-  </li>
+    #{power.ck "whouses.index"}
+      <li>
+        <a href="#whouseAttrs" data-toggle="tab" id="showWhouseAttr">仓库信息</a>
+      </li>
+    #{/power.ck}
 </ul>
 
 <div id="selling_tabs" class="tab-content">
@@ -102,9 +103,10 @@
       <div class="span6" style="height:450px;width:1200px" id='skuprocureqty'></div>
     </div>
   </div>
-
-  <div class="tab-pane fade" id='whouseAttrs'>
-      #{include 'Products/_whouseAttrs.html'/}
-  </div>
+    #{power.ck "whouses.index"}
+      <div class="tab-pane fade" id='whouseAttrs'>
+          #{include 'Products/_whouseAttrs.html'/}
+      </div>
+    #{/power.ck}
 </div>
 #{/else}
