--- a/core/app/views/Whouses/index.html
+++ b/core/app/views/Whouses/index.html
@@ -5,56 +5,57 @@
 #{flash_alert /}
 #{info_row title:'仓库' /}
 <div class="row-fluid">
-    <div class="span12">
-        <table class="table table-condensed table-bordered">
-            <tr>
-                <th>#</th>
-                <th>Name</th>
-                <th>City</th>
-                <th>Province</th>
-                <th>PostCode</th>
-                <th>Country</th>
-                <th>Type</th>
-                <th>Account</th>
-                <th></th>
-            </tr>
-        #{list items:whs, as:'wh'}
-            <tr>
-                <td>${wh.id}</td>
-                <td data-toggle="toggle" data-target="#whouse_${wh.id}"><i class="icon-reorder"></i> ${wh.name}</td>
-                <td>${wh.city}</td>
-                <td>${wh.province}</td>
-                <td>${wh.postalCode}</td>
-                <td>${wh.country}</td>
-                <td>${wh.type}</td>
-                <td>${wh.account?.prettyName()}</td>
-                <td>
-                    <a href="@{Whouses.edit()}/${wh.id}" class="btn btn-primary">更新</a>
-                </td>
-            </tr>
-            <tr id="whouse_${wh.id}" style="display:none;">
-                <td colspan="10">
-                    <div class="row-fluid">
-                        <div class="span6" style="display:inline-block;">
-                            <h4 class="text-info">Memo:</h4>
-                        ${wh.memo}
-                        </div>
-                        <div class="span6" style="display:inline-block;">
-                            <h4>Address</h4>
-                        ${wh.address}
-                        </div>
-                    </div>
-                </td>
-            </tr>
-        #{/list}
-        </table>
-    </div>
+  <div class="span12">
+    <table class="table table-condensed table-bordered">
+      <tr>
+        <th>#</th>
+        <th>Name</th>
+        <th>City</th>
+        <th>Province</th>
+        <th>PostCode</th>
+        <th>Country</th>
+        <th>Type</th>
+        <th>Account</th>
+        <th></th>
+      </tr>
+    #{list items:whs, as:'wh'}
+      <tr>
+        <td>${wh.id}</td>
+        <td data-toggle="toggle" data-target="#whouse_${wh.id}"><i class="icon-reorder"></i> ${wh.name}</td>
+        <td>${wh.city}</td>
+        <td>${wh.province}</td>
+        <td>${wh.postalCode}</td>
+        <td>${wh.country}</td>
+        <td>${wh.type}</td>
+        <td>${wh.account?.prettyName()}</td>
+        <td>
+          <a href="@{Whouses.edit()}/${wh.id}" class="btn btn-primary">更新</a>
+        </td>
+      </tr>
+      <tr id="whouse_${wh.id}" style="display:none;">
+        <td colspan="10">
+          <div class="row-fluid">
+            <div class="span6" style="display:inline-block;">
+              <h4 class="text-info">Memo:</h4>
+            ${wh.memo}
+            </div>
+            <div class="span6" style="display:inline-block;">
+              <h4>Address</h4>
+            ${wh.address}
+            </div>
+          </div>
+        </td>
+      </tr>
+    #{/list}
+    </table>
+  </div>
 </div>
 
 
 <div class="row-fluid">
-    <div class="span12">
-        <a href="@{Whouses.blank()}" class="btn btn-primary">添加仓库</a>
-    </div>&nbsp;
+  <div class="span12">
+    <a href="@{Whouses.blank()}" class="btn btn-primary">添加仓库</a>
+  </div>
+  &nbsp;
 </div>
 
