--- a/core/app/views/ProcureUnits/_unit_market_list.html
+++ b/core/app/views/ProcureUnits/_unit_market_list.html
@@ -111,7 +111,7 @@
     <td>
       <!-- FnSku 下载 Label -->
         #{if unit.selling?.fnSku}
-          <a href="@{Sellings.sellingLabel(unit.sid)}" class="btn btn-success btn-block">
+          <a href="@{ProcureUnits.fnSkuLable(unit.sid, false)}" class="btn btn-success btn-block">
             <i class="icon-download-alt"></i> ${unit.selling.fnSku}
           </a>
         #{/if}
