--- a/core/app/views/ProcureUnits/_unit_list.html
+++ b/core/app/views/ProcureUnits/_unit_list.html
@@ -123,11 +123,11 @@
         #{if unit.selling?.fnSku}
         ${unit.selling.fnSku}
           <br/>
-          <a href="@{ProcureUnits.fnSkuLable(unit.sid)}" target="_blank" rel="tooltip" title="增加了 SKU 信息">
+          <a href="@{ProcureUnits.fnSkuLable(unit.sid, true)}" target="_blank" rel="tooltip" title="增加了 SKU 信息">
             <i class="icon-download-alt"></i> New
           </a>
           <br/>
-          <a href="@{Sellings.sellingLabel(unit.sid)}" target="_blank">
+          <a href="@{ProcureUnits.fnSkuLable(unit.sid, false)}" target="_blank">
             <i class="icon-download-alt"></i> Old
           </a>
         #{/if}
