--- a/core/app/views/header.html
+++ b/core/app/views/header.html
@@ -225,6 +225,9 @@
                 #{power.ck "elcuk.index"}
                   <li><a href="@{Elcuk.index()}">全局参数</a></li>
                 #{/power.ck}
+                #{power.ck "fbacenters.index"}
+                  <li><a href="@{FBACenters.index()}">FBACenter</a></li>
+                #{/power.ck}
                 #{power.ck "jobs.index"}
                   <li><a href="@{Jobs.index()}">任务管理</a></li>
                 #{/power.ck}
@@ -252,7 +255,6 @@
                 #{power.ck "categoryinfos.categoryassign"}
                   <li><a href="@{CategoryInfos.categoryassign()}">部门品线负责人管理</a></li>
                 #{/power.ck}
-              <li><a href="@{Elcuk.index()}">系统状态</a></li>
             </ul>
           </li>
         #{/power.ck}
